force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/ucinn_ascendv2__Patient_Referral_v1__c.object-meta.xml
<CustomObject>
    <description>Stores the referral a physician makes of a patient.</description>
    <label>Patient Referral</label>
    <nameField>
        <label>Patient Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>