force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>