force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Development_Officer__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Development_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patient_Referrals_v1_Development_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>