force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Faculty_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Faculty_Follow_Up_Date__c</fullName>
    <label>Faculty Follow-Up Date</label>
    <type>Date</type>
</CustomField>