force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Fundraiser_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Rating__c</fullName>
    <label>Fundraiser Rating</label>
    <length>80</length>
    <type>Text</type>
</CustomField>