force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Is_Patient_Opted_Out_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Patient_Opted_Out_Formula__c</fullName>
    <formula>ucinn_ascendv2__Patient__r.ucinn_ascendv2__Is_Hospital_Dev_and_Fundraising_Opt_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Patient Opted Out</label>
    <type>Checkbox</type>
</CustomField>