force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Is_Patient_Requested_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Patient_Requested_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient Requested Contact</label>
    <type>Checkbox</type>
</CustomField>