force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Is_Planned_Giving__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Planned_Giving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Planned Giving</label>
    <type>Checkbox</type>
</CustomField>