force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Patient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Referrals (Patient)</relationshipLabel>
    <relationshipName>Patient_Referrals_v1_Patient</relationshipName>
    <type>Lookup</type>
</CustomField>