force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Patient_Referral_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient_Referral_Name_Auto_Number__c</fullName>
    <displayFormat>PR-{0000000}</displayFormat>
    <label>Patient Referral Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>