force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Patient_Referral_Opp_Count_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient_Referral_Opp_Count_Roll_Up__c</fullName>
    <label>Patient Referral Opportunities Count</label>
    <summaryForeignKey>ucinn_ascendv2__Patient_Referral_Opportunity_v1__c.ucinn_ascendv2__Patient_Referral__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>