force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Physician__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Referrals (Physician)</relationshipLabel>
    <relationshipName>Patient_Referrals_v1_Physician</relationshipName>
    <type>Lookup</type>
</CustomField>