force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Proposal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Patient Referrals</relationshipLabel>
    <relationshipName>Patient_Referrals_v1_Proposal</relationshipName>
    <type>Lookup</type>
</CustomField>