force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Referral_Date__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>