force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Referral_Fiscal_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Referral_Fiscal_Year_Formula__c</fullName>
    <formula>If (Month(ucinn_ascendv2__Referral_Date__c)&gt;=7,TEXT(YEAR(ucinn_ascendv2__Referral_Date__c)+1),TEXT(YEAR(ucinn_ascendv2__Referral_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Fiscal Year</label>
    <type>Text</type>
</CustomField>