force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Stage_of_Readiness_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Patient__r.ucinn_ascendv2__Stage_of_Readiness__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage of Readiness</label>
    <type>Text</type>
</CustomField>