force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Substantive_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Substantive_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substantive Contact</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Patient Referrals</relationshipLabel>
    <relationshipName>Patient_Referrals_v1_Substantive_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>