force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Wealth_Rating_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Formula__c</fullName>
    <formula>ucinn_ascendv2__Patient__r.ucinn_ascendv2__Wealth_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth Rating</label>
    <type>Text</type>
</CustomField>