force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/fields/ucinn_ascendv2__Work_Plan_Unit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Unit_Percentage__c</fullName>
    <label>Work Plan Unit Percentage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>