force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_v1__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Development_Officer__c</columns>
    <columns>ucinn_ascendv2__Proposal__c</columns>
    <columns>ucinn_ascendv2__Patient__c</columns>
    <columns>ucinn_ascendv2__Physician__c</columns>
    <columns>ucinn_ascendv2__Work_Plan_Unit__c</columns>
    <columns>ucinn_ascendv2__Referral_Date__c</columns>
    <columns>ucinn_ascendv2__Referral_Fiscal_Year_Formula__c</columns>
    <columns>ucinn_ascendv2__Is_Planned_Giving__c</columns>
    <columns>ucinn_ascendv2__Responsible_Persons__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>